--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://maven.terraformersmc.com/releases/" }
+	maven { url "https://maven.architectury.dev/" }
 }
 
 loom {
@@ -38,7 +41,16 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-	
+
+	// Mod dependencies
+	//ARCHITECTURY
+	modApi "dev.architectury:architectury-fabric:19.0.1"
+	//Cloth Config
+	modApi "me.shedaniel.cloth:cloth-config-fabric:21.11.153"
+	//Mod Menu
+	modApi "com.terraformersmc:modmenu:17.0.0-beta.1"
+	// GSON
+	implementation 'com.google.code.gson:gson:2.13.2'
 }
 
 processResources {
